# DeltaWing

./: .gitattributes  .gitignore  CMakeLists.txt  DeltaWing.code-workspace  README.md  linux_build.sh  setup_linux.sh  windows_build.bat
assets/: font.frag  font.fsh  font.vert  pc.frag  pc.vert  pct.fsh  pct.vsh  pt.frag  pt.vert  roboto_mono.fnt
include/glad/: glad.h
lib/: libglfw3.lib
src/: engine.c  engine.h  font.c  font.h  glad.c  globals.h  input.c  input.h  main.c  objects.c  objects.h  renderer.c  renderer.h  scenes.h  util.c  util.h
src/entities/: player.c  player.h
src/scenes/: mainmenu.c  mainmenu.h  world.c  world.h
